--- a/foundations/flex/06-flex-layout/index.html
+++ b/foundations/flex/06-flex-layout/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="header">
+      <div class="links">
       <ul class="left-links">
         <li><a href="#">About</a></li>
         <li><a href="#">Store</a></li>
@@ -17,6 +18,7 @@
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
       </ul>
+    </div>
     </div>
     <div class="content">
       <img src="./logo.png" alt="Project logo. Represents odin with the project name.">
